--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,12 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 ### YamlMime:Yaml
-ms.openlocfilehash: 3dbffcf0c598225daf74f52e6c85bf9e41f7a55a
-ms.sourcegitcommit: 52128e1e0cb6e7de6806013aec318b8c01dd2376
-ms.translationtype: HT
-ms.contentlocale: es-ES
-ms.lasthandoff: 02/14/2021
-ms.locfileid: "104286857"
+# ms.openlocfilehash: 3dbffcf0c598225daf74f52e6c85bf9e41f7a55a
+# ms.sourcegitcommit: 52128e1e0cb6e7de6806013aec318b8c01dd2376
+# ms.translationtype: HT
+# ms.contentlocale: es-ES
+# ms.lasthandoff: 02/14/2021
+# ms.locfileid: "104286857"
 trigger:
 - '*'
 pool:
